--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
    <div id="app" class="ui container">
-      <h2 class="ui header">Clothing Inquiry Sheet</h2>
+      <h2 class="ui header">Inquiry Sheet</h2>
       <input-form></input-form>
    </div>
 
